[gd_scene load_steps=4 format=3 uid="uid://ckqthyukac8wf"]

[ext_resource type="Script" uid="uid://63xs5b3mf230" path="res://scenes/UI/achievements_screen.gd" id="1_0xjh1"]
[ext_resource type="Theme" uid="uid://d2j8plpna1rmh" path="res://resources/menu-test_theme.tres" id="1_av81j"]

[sub_resource type="GDScript" id="GDScript_3fk36"]
script/source = "@tool
class_name AnimButton extends Button

#NOTE: the hover and click audio is configured from UiAudioM

var tween: Tween

func _ready() -> void:
	mouse_entered.connect(_on_mouse_entered)
	mouse_exited.connect(_on_mouse_exited)
	button_down.connect(_on_button_down)
	button_up.connect(_on_button_up)
	pressed.connect(_on_pressed)
	
	set_anchors_and_offsets_preset(Control.PRESET_CENTER)
	size_flags_vertical = Control.SIZE_SHRINK_CENTER
	
	pivot_offset = size/2
	resized.connect(func(): pivot_offset = size/2)
	
	# get_tree().get_root().add_child.call_deferred(click_stream_player)
	

func _on_mouse_entered() -> void:
	reset_tween()
	tween.tween_property(self, \"scale\", Vector2(1.075, 1.075), 0.15).set_trans(Tween.TRANS_CUBIC)
	if !Engine.is_editor_hint():
		UiAudioM.play_hover_sound()

func _on_mouse_exited() -> void:
	reset_tween()
	tween.tween_property(self, \"scale\", Vector2(1.0, 1.0), 0.15).set_trans(Tween.TRANS_CUBIC)

func _on_button_down() -> void:
	reset_tween()
	tween.tween_property(self, \"scale\", Vector2(0.95, 0.95), 0.1).set_trans(Tween.TRANS_CUBIC)

func _on_button_up() -> void:
	reset_tween()
	tween.tween_property(self, \"scale\", Vector2(1.0, 1.0), 0.1).set_trans(Tween.TRANS_CUBIC)


func _on_pressed() -> void:
	if !Engine.is_editor_hint():
		UiAudioM.play_click_sound()


#FIXME: Doesnt work due to the timers not being syncronised properly, hence looking bad.
	#await get_tree().create_timer(0.15).timeout
	#_on_mouse_entered()

# func _exit_tree() -> void:
	#await click_stream_player.finished
	#click_stream_player.volume_db = -1000
	# click_stream_player.queue_free()

func reset_tween() -> void:
	if tween:
		tween.kill()
	tween = create_tween()
"

[node name="AchievementsScreenControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_av81j")
script = ExtResource("1_0xjh1")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IconBackground" type="Panel" parent="PanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
modulate = Color(0.355314, 0.355314, 0.355314, 1)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="PanelContainer/HBoxContainer/MarginContainer/IconBackground"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_right = 380.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VirusEradicationGoalsName" type="RichTextLabel" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="UnlockCondition" type="RichTextLabel" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Reward" type="RichTextLabel" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AchievementsContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "MENU_LABEL_BACK"
script = SubResource("GDScript_3fk36")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
